PLT-7351 - Fixing flag icon alignment

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -741,6 +741,16 @@
             }
         }
 
+        &.post--comment {
+            .attachment {
+                .attachment__body__wrap {
+                    .btn-close {
+                        left: -13px;
+                    }
+                }
+            }
+        }
+
         .status-wrapper {
             cursor: auto;
             height: 14px;
